--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<p id="picstitle">My custom arch WM</p>
 		</div>
 		<p id="AboutMeTitle">About Me</p>
-		<p id="AboutMeText">here i should write some shit that i don't know about<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>yes</p>
+		<p id="AboutMeText">here i should write things about me but i'll do it later , if u dont know what this pictures are,this is a custom desktop of an operating system called arch linux and u can customize the desktop as u want like i did here<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>yes</p>
 	
 
 		<script> src="SScript.js"></script>	
